# aftiktuna

./: LICENSE.txt  README.md  build.gradle
aftiktuna-rust/: .gitignore  CHANGELOG.md  Cargo.toml  linux-setup.sh  linux-ubuntu-setup.sh  readme.txt
aftiktuna-rust/aftiktuna-editor/: Cargo.toml  linux-ubuntu-setup.sh
aftiktuna-rust/aftiktuna-editor-macroquad/: Cargo.toml
aftiktuna-rust/aftiktuna-editor-three-d/: Cargo.toml  linux-ubuntu-setup.sh
aftiktuna-rust/aftiktuna-editor-three-d/src/: lib.rs
aftiktuna-rust/aftiktuna-macroquad/: Cargo.toml  linux-ubuntu-setup.sh
aftiktuna-rust/aftiktuna-macroquad/src/: camera.rs  lib.rs  macroquad_interface.rs  main.rs  render.rs  store_render.rs  texture.rs  tooltip.rs  ui.rs
aftiktuna-rust/aftiktuna-three-d/: Cargo.toml
aftiktuna-rust/aftiktuna-three-d/src/: app.rs  asset.rs  background.rs  darkness.frag  game.rs  lib.rs  main.rs  render.rs  ui.rs
aftiktuna-rust/assets/: aftik_colors.json  character_names.json  character_profiles.json  crew_data.json  fauna.json  item_types.json  locations.json  noun_data.json  readme.md  selectable_aftik_color_names.json  species.json  species_data.json  starting_crew.json  symbols.json
aftiktuna-rust/assets/area_furnish/: fortuna_encounter.json  poster.json  utility_room_x3.json
aftiktuna-rust/assets/dialogue/: ask_name.json  badly_hurt_after_battle.json  fortuna_hostile_encounter.json  give_item.json  help_force_door.json  initiate_trade.json  landing_with_fuel.json  landing_without_enough_fuel.json  obtained_enough_fuel.json  recruit.json  recruit_fail.json  recruitable.json
aftiktuna-rust/assets/location/: abandoned_facility.json  abandoned_facility2.json  crew_ship.json  eyesaur_forest.json  fortuna.json  fortuna2.json  goblin_forest.json  village.json  village2.json
aftiktuna-rust/assets/loot_table/: regular.json  resource.json  store_artefact.json  tool.json  valuable.json
aftiktuna-rust/assets/species_color/: aftik.json  pagepoh.json  scarvie.json
aftiktuna-rust/assets/test/: block_interrupt.json  combat.json  misc.json
aftiktuna-rust/assets/texture/: cut_door.json  cut_shack.json  door.json  fortuna_chest.json  path.json  portrait.json  shack.json  ship.json  ship_controls.json  ship_exit.json  small_unknown.json  unknown.json
aftiktuna-rust/icon/: icon_16x16.rgba  icon_32x32.rgba  icon_64x64.rgba
aftiktuna-rust/json-schema/: aftik_colors.json  area_furnish.json  backgrounds.json  crew_data.json  dialogue.json  fauna.json  item_types.json  location.json  locations.json  loot_table.json  model.json  noun_data.json  selectable_aftik_color_names.json  species.json  species_colors.json  species_data.json  symbol_map.json
aftiktuna-rust/json-schema/parts/: array_color.json  attack_set.json  background_layer.json  background_layer_offset.json  character_interaction.json  conditioned_dialogue_node.json  dialogue_expression.json  dialogue_node.json  direction.json  location_symbol.json  model_layer.json  model_layer_condition.json  name_path.json  profile_or_random.json  rgb_color.json  species_data.json  stat_changes.json  stats.json  unarmed_type.json  vec2.json
aftiktuna-rust/src/: action.rs  ai.rs  area.rs  asset.rs  command.rs  core.rs  dialogue.rs  game.rs  game_interface.rs  game_loop.rs  item.rs  lib.rs  location.rs  macroquad_interface.rs  main.rs  parse.rs  position.rs  render.rs  serialization.rs  standard_io_interface.rs  status.rs  view.rs
aftiktuna-rust/src/action/: combat.rs  dialogue.rs  door.rs  item.rs  launch.rs  ship.rs  trade.rs
aftiktuna-rust/src/area/: creature.rs  door.rs  init.rs  item.rs  template.rs
aftiktuna-rust/src/asset/: background.rs  location.rs  model.rs  placement.rs  profile.rs  (+1 more)
(+363 files in other folders)
