[workspace]
members = ["aftiktuna-editor", "aftiktuna-macroquad", "aftiktuna-three-d"]

[workspace.package]
version = "0.10.0"

[workspace.dependencies]
egui = "0.28.1"
indexmap = { version = "2.2.6", features = ["serde"] }
macroquad = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[package]
name = "aftiktuna"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { version = "0.10.3", features = ["column-serialize"] }
indexmap.workspace = true
rand = { version = "0.8.5", features = ["alloc"] }
rmp-serde = "1.1.2"
serde.workspace = true
serde_json.workspace = true

[features]
debug_logging = []
