[workspace]
members = ["aftiktuna-editor-macroquad", "aftiktuna-editor-three-d", "aftiktuna-macroquad", "aftiktuna-three-d"]

[workspace.package]
version = "0.11.0"

[workspace.dependencies]
egui = "0.31.1"
indexmap = { version = "2.2.6", features = ["serde"] }
macroquad = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
three-d = { version = "0.18.0", default-features = false, features = ["egui-gui", "text", "window"] }


[package]
name = "aftiktuna"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { version = "0.10.3", features = ["column-serialize"] }
indexmap.workspace = true
rand = { version = "0.8.5", features = ["alloc"] }
rmp-serde = "1.1.2"
serde.workspace = true
serde_json.workspace = true

[features]
debug_logging = []
