[workspace]
members = ["aftiktuna-editor-three-d", "aftiktuna-three-d"]

[workspace.package]
version = "0.11.0"

[workspace.dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
three-d = { version = "0.18.0", default-features = false, features = ["egui-gui", "text", "window"] }


[package]
name = "aftiktuna"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { version = "0.10.3", features = ["column-serialize"] }
indexmap.workspace = true
rand = "0.9.2"
rmp-serde = "1.1.2"
serde.workspace = true
serde_json.workspace = true

[features]
debug_logging = []
