[package]
name = "aftiktuna-editor"
version.workspace = true
edition = "2021"

[dependencies]
aftiktuna = { path = ".." }
aftiktuna-macroquad = { path = "../aftiktuna-macroquad" }
egui.workspace = true
indexmap.workspace = true
macroquad.workspace = true
serde_json.workspace = true
serde_json_pretty = "0.1.0"
rfd = "0.13"
