[package]
name = "aftiktuna-macroquad"
edition = "2021"
version.workspace = true

[dependencies]
aftiktuna = { path = ".." }
egui.workspace = true
egui-miniquad = "0.15.0"
indexmap = { version = "2.2.6", features = ["serde"] }
macroquad.workspace = true
serde.workspace = true
serde_json.workspace = true
