[package]
name = "aftiktuna-three-d"
edition = "2021"
version.workspace = true

[dependencies]
aftiktuna = { path = ".." }
epaint_default_fonts = "0.29.1"
three-d = { version = "0.18.0", default-features = false, features = ["egui-gui", "text", "window"] }
three-d-asset = { version = "0.9.2", features = ["png"] }
winit = "0.28"
